--- a/black.html
+++ b/black.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title> Railclock </title>
-<link rel="shortcut icon" type="image/ico" href="E:\railclock\favicon.ico"/>
+<link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 <head>
 <link rel="stylesheet" href="styleb.css">
 <script>
